[Infra][TRTLLM-3652] - Update dependencies to TRT 10.9 / CUDA 12.8.1 / DLFW 25.03(Internal)
Signed-off-by: Yiqing Yan <yiqingy@nvidia.com>
(cherry picked from commit 58db1340ef7db22f1910f878d220a92be5b830d1)

--- a/docker/Dockerfile.multi
+++ b/docker/Dockerfile.multi
@@ -1,6 +1,7 @@
 # Multi-stage Dockerfile
-ARG BASE_IMAGE=nvcr.io/nvidia/pytorch
-ARG BASE_TAG=25.01-py3
+# NOTE: DLFW 25.03 has not been released yet, so we're using the internal DLFW version
+ARG BASE_IMAGE=gitlab-master.nvidia.com:5005/dl/dgx/pytorch
+ARG BASE_TAG=25.03-py3-devel
 ARG DEVEL_IMAGE=devel
 
 FROM ${BASE_IMAGE}:${BASE_TAG} AS base
