--- a/tests/unittest/api_stability/references/completion_output.yaml
+++ b/tests/unittest/api_stability/references/completion_output.yaml
@@ -10,6 +10,14 @@ methods:
       request_perf_metrics:
         annotation: Optional[tensorrt_llm.bindings.executor.RequestPerfMetrics]
         default: null
+      additional_context_outputs:
+        annotation: Optional[Dict[str, torch.Tensor]]
+        default: null
+        status: beta
+      additional_generation_outputs:
+        annotation: Optional[Dict[str, torch.Tensor]]
+        default: null
+        status: beta
     return_annotation: None
 properties:
   length:
